# pdftools

./: .gitignore  README.md  pyproject.toml
pdftools/: common.py  extract_page.py  merge.py  pdftool.py  unlock_pdf.py
scripts/pdftools/: extract_page.py  pdftool.py  unlock_pdf.py
