[tool.poetry]
name = "scripts"
version = "0.1.2"
description = ""
authors = ["Elran Shefer <elran777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = {extras = ["crypto"], version = "^2.11.1"}
typer = {extras = ["all"], version = "^0.7.0"}
rich = "^12.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdftools = 'scripts.pdftools.pdftool:main'
